# realtobe3

./: README
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: tobe3_real.pc
catkin_ws/src/tobe3_real/: CMakeLists.txt  package.xml
catkin_ws/src/tobe3_real/launch/: gazebo_mirrors_tobe.launch  realtobe3.launch  realtobe_CPG_walk.launch  realtobe_no_gazebo.launch  realtobe_no_gazebo_no_imu.launch  simtobe_only.launch  simtobe_respawn.launch  simtobe_setup.launch  simtobe_stand.launch  tobe_and_gazebo.launch  tobe_gazebo.launch  tobe_in_gazebo_only.launch  tobe_mirrors_gazebo.launch  tobe_test.launch
catkin_ws/src/tobe3_real/scripts/: arduino_read1.py  lean_detect.py  realtime_plot.py  simdata_output.py  simtobe_mirror.py  simtobe_move.py  simtobe_reset.py  simtobe_stand.py  simtobe_stand2.py  test_force.py  tobe_mirrors_gazebo.py  tobe_move.py  tobe_stand2.py  tobe_test.py  tobe_walk.py
catkin_ws/src/tobe3_real/src/tobe3_real/: mirror.py  mirror_gazebo.py  simstand.py  simstand2.py  simstand_test.py  stand.py  stand1.py  stand2.py  stand3.py  teststand1.py  tobe.py  tobesim.py  tobesim2.py
catkin_ws/src/tobe_control/config/: tobe_control.yaml  tobe_control2.yaml
catkin_ws/src/tobe_control/launch/: tobe_control2.launch
catkin_ws/src/tobe_description/: humanoid_with_ankles3.xml  tobe.xml  tobe2.xacro  tobe2.xml  tobe3.xml  tobe4.xml  tobe5.xml  tobe_nomotors.xml  tobe_robot.urdf  tobe_torque.urdf
catkin_ws/src/tobe_description/meshfiles/: 34-47021_FSR_400_Short_Tail_FCD-Conv_BDR-Col.stl  skid.stl  (+21 more)
(+5 files in other folders)
