<?xml version="1.0"?>
<package>
  <name>tobe3_real</name>
  <version>0.1.0</version>
  <description>Provides launch files to run TOBE using ROS</description>

  <maintainer email="jsweaffordjr@gmail.com">Jerry Sweafford</maintainer>


  <license>BSD</license>
  <url type="website">http://wiki.ros.org/darwin_gazebo</url>


  <author email="jsweaffordjr@gmail.com">Jerry Sweafford</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
